<resources>
    <string name="app_name" translatable="false">BannerViewPager</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="wrapper_photo_view">Jump to random position smoothly</string>
    <string name="start_now">Start Now</string>
    <string name="guide" translatable="false">Guide</string>
    <string name="normal" translatable="false">Normal</string>
    <string name="smooth" translatable="false">Smooth</string>
    <string name="image_description">Image description</string>
    <string name="tab1" translatable="false">Home</string>
    <string name="tab2" translatable="false">Page</string>
    <string name="tab3" translatable="false">Indicator</string>
    <string name="tab4" translatable="false">Others</string>
    <string name="text_page_style">Page Style:</string>
    <string name="text_indicator_style">Indicator Style:</string>
    <string name="custom_style">Custom Style</string>
    <string name="text_slide_mode">Indicator Slide Mode</string>
    <string name="pager_indicator">About ViewPagerIndicator</string>
    <string name="qq_group" translatable="false">60902509</string>
    <string name="about_banner">About BannerViewPager</string>
    <string name="indicator_name" translatable="false">ViewPagerIndicator</string>
    <string name="email" translatable="false">zhpanvip@outlook.com</string>
    <string name="add_data">Add Data</string>
    <string name="remove_item">Remove Item</string>
    <string name="insert_item">Insert Item</string>
    <string name="connect_error">Network connection failed, please check network</string>
    <string name="connect_timeout">Connection timed out, please try again later</string>
    <string name="bad_network">Server exception</string>
    <string name="parse_error">Failed to parse server response data</string>
    <string name="unknown_error">Unknown error</string>
    <string name="response_return_error">Server failed to return data</string>
    <string name="request_error">Failed to request server, error code: </string>
    <string name="parameters_exception">Parameter exception</string>
    <string name="verify_code_error">Incorrect verification code</string>
    <string name="verify_code_expired">Verification code has expired</string>
    <string name="not_register">The account has not been registered yet</string>
    <string name="wrong_pwd_username">Incorrect username or password</string>
    <string name="user_registered">The account already exists</string>
    <string name="wrong_password">Incorrect password</string>
    <string name="remote_login">Your account has been logged in on another device. If this was not you, please change your password.</string>
    <string name="text_page_style_more">More Page Styles:</string>
    <string name="next">Next</string>
    <string name="pre">Previous</string>
</resources>