<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/other">

        <item
            android:id="@+id/nav_banner"
            android:icon="@drawable/ic_banner"
            android:title="@string/app_name"
            app:actionViewClass="android.widget.TextView" />

        <item
            android:id="@+id/nav_indicator"
            android:icon="@drawable/ic_indicator"
            android:title="@string/indicator_name" />

        <item
            android:id="@+id/nav_qq_group"
            android:icon="@drawable/ic_qq_group"
            android:title="@string/qq_group" />

        <item
            android:id="@+id/nav_email"
            android:icon="@drawable/ic_email"
            android:title="@string/email" />

    </group>

</menu>